After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752640 - Warning in gst_rtsp_thread_pool_cleanup()
Warning in gst_rtsp_thread_pool_cleanup()
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
unspecified
Other Linux
: Normal minor
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-20 20:37 UTC by Xavier Claessens
Modified: 2015-08-16 13:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix possible warning in gst_rtsp_thread_pool_cleanup() (991 bytes, patch)
2015-07-20 20:38 UTC, Xavier Claessens
committed Details | Review

Description Xavier Claessens 2015-07-20 20:37:27 UTC
My unit test's main() ends with gst_rtsp_thread_pool_cleanup() but some of my tests are not using the rtsp server and are running in a subprocess. In that case I get this warning:

(lt-server:18454): GLib-GObject-WARNING **: invalid class cast from (NULL) pointer to 'GstRTSPThreadPool'
Comment 1 Xavier Claessens 2015-07-20 20:38:41 UTC
Created attachment 307785 [details] [review]
Fix possible warning in gst_rtsp_thread_pool_cleanup()
Comment 2 Nicolas Dufresne (ndufresne) 2015-07-20 20:46:22 UTC
Review of attachment 307785 [details] [review]:

I think this makes sense. Code may not know if at least one instance was created.
Comment 3 Nicolas Dufresne (ndufresne) 2015-07-20 20:47:52 UTC
Comment on attachment 307785 [details] [review]
Fix possible warning in gst_rtsp_thread_pool_cleanup()

commit 5585dc587831a8dbf6d563cd054a61c85992fe02
Author: Xavier Claessens <xavier.claessens@collabora.com>
Date:   Mon Jul 20 16:37:44 2015 -0400

    threadpool: Fix possible warning in gst_rtsp_thread_pool_cleanup()
    
    https://bugzilla.gnome.org/show_bug.cgi?id=752640