threadpool: Fix possible warning in gst_rtsp_thread_pool_cleanup()

https://bugzilla.gnome.org/show_bug.cgi?id=752640